// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaySticker renders 1`] = `
<span
  className="sticker"
>
  <span
    className="sticker-overlay"
  >
    A
  </span>
</span>
`;

exports[`ClaySticker renders with a display type 1`] = `
<span
  className="sticker sticker-danger"
>
  <span
    className="sticker-overlay"
  >
    B
  </span>
</span>
`;

exports[`ClaySticker renders with a outside 1`] = `
<span
  className="sticker sticker-top-left sticker-outside"
>
  <span
    className="sticker-overlay"
  >
    B
  </span>
</span>
`;

exports[`ClaySticker renders with a position 1`] = `
<span
  className="sticker sticker-bottom-left"
>
  <span
    className="sticker-overlay"
  >
    B
  </span>
</span>
`;

exports[`ClaySticker renders with a shape circle 1`] = `
<span
  className="sticker sticker-circle"
>
  <span
    className="sticker-overlay"
  >
    B
  </span>
</span>
`;

exports[`ClaySticker renders with a size 1`] = `
<span
  className="sticker sticker-xl"
>
  <span
    className="sticker-overlay"
  >
    B
  </span>
</span>
`;

exports[`ClaySticker renders with a user icon 1`] = `
<span
  className="sticker sticker-user-icon"
>
  <span
    className="sticker-overlay"
  >
    <img
      alt="placeholder"
      className="sticker-img"
      src="#"
    />
  </span>
</span>
`;

exports[`ClaySticker renders with an image 1`] = `
<span
  className="sticker"
>
  <span
    className="sticker-overlay"
  >
    <img
      alt="placeholder"
      className="sticker-img"
      src="#"
    />
  </span>
</span>
`;

exports[`ClaySticker renders with an overlay 1`] = `
<span
  className="sticker"
>
  <span
    className="sticker-overlay"
  >
    <span
      className="sticker-overlay"
    >
      <img
        alt=""
        className="sticker-img"
        src="#"
      />
    </span>
    <span
      className="sticker-overlay"
    >
      BC
    </span>
  </span>
</span>
`;
